Wiping clean everything

--- a/index.html
+++ b/index.html
@@ -13,37 +13,21 @@
 <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 <!--epic embed win-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta content="DXL44 website" property="og:title" />
-<meta content="the the the the the dxl website" property="og:description" />
+<meta content="DXL44 Website" property="og:title" />
+<meta content="Hi. I'm DXL44." property="og:description" />
 <meta content="https://destroyerxl44.github.io" property="og:url" />
 <!--<meta content="image 5here lmao" property="og:image" /> -->
 <meta content="#FAA704" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
+
+
 <div class="mainpageBanner container-fluid">
 <div class="mainTitle">DXL44 WEBSITE</div>
-<div class="mainText" id="randomGreet" onclick="fpRandomText()">There should be random text here.</div>
+<div id="randomGreet" onclick="fpRandomText()">There should be random text here.</div>
 </div><br>
 <div class="mainFlex">
 <div class="mainWindow" id="aboutMe">
-    <h1>About Me</h1>
-    Hi. I'm a computer science major. And this website is super work in progress, sorry. But I have a list of links! Sort of.
-</div>
-<div class="mainWindow" id="aboutMe">
-    <h1>Links</h1>
-    <a href="https://github.com/dxl44" class="btn btn-info" role="button">GitHub</a>
-    <a href="https://toyhou.se/DXL44" class="btn btn-info" role="button">Toyhouse</a>
-    <a href="https://youtube.com/@DXL44" class="btn btn-info" role="button">YouTube</a>
-    <a href="https://twitch.tv/dxl44" class="btn btn-info" role="button">Twitch</a><br>
-    <a href="https://twitter.com/dxl4444" class="btn btn-info" role="button">Twitter</a>
-    <a href="https://bsky.app/profile/dxl44.bsky.social" class="btn btn-info" role="button">BlueSky</a><br>
-    <!-- misc links -->
-</div>    
-<div class="mainWindow">
-    <h1>Internets</h1>
-    <a href='http://internetometer.com/give/46244'><img src='http://internetometer.com/image/46244.png'/></a>
-
-
 </div>
 <!--scrip-->
 <script type="text/javascript" src="js/randomtext.js"></script>
